# algorithms

./: CMakeLists.txt  README.md
include/: Tests.h
src/: tests.c
src/search/: boyerMoore.c  kmp.c  rabinKarp.c
src/sorts/: bubble_sort.c  insert_sort.c  pocket_sort.c  pyramid_sort.c  pyramid_sort_r.c  quick_sort.c  select_sort.c  smooth_sort.c  tournament_sort.c
